objects/Deal_Desk__c.object
<CustomObject>
    <label>Deal Desk</label>
    <nameField>
        <displayFormat>DD-{00000000}</displayFormat>
        <label>Deal Desk No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Desk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Sales Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Desk</relationshipLabel>
        <relationshipName>Deal_Desk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver_s_Comments__c</fullName>
        <label>Approver&apos;s Comments</label>
        <type>TextArea</type>
    </fields>
</CustomObject>